Get current data change with tests and alembic fixes
