# backend/api/schemas/__init__.py
@@ -21,3 +21,4 @@ from .simulation_def import SimulationDefBase
 from .simulation import SimulationBase, UpdateSimulation
 from .simulation_param import SimulationParamBase, SimulationParamOut, UpdateSimulationParam, SimulationParamIn
 from .simulation_data import SimulationDataBase, SimulationDataOut
+from .current_trend_data import CurrentTrendData
