# backend/api/schemas/current_trend_data.py
@@ -1,0 +1,8 @@
+from typing import Sequence
+from pydantic import BaseModel
+from . import TrendDataMultiple
+
+
+class CurrentTrendData(BaseModel):
+    LastTimestamp: int
+    Data: list[TrendDataMultiple] | Sequence[TrendDataMultiple] = []
